Dark mode quick fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@ a {
 
   * {
     background: var(--a-gray-900) !important;
-    color: var(--a-gray-200);
+    color: var(--a-gray-200) !important;
   }
 }
 
